<resources>
    <string name="app_name">LA</string>


    <string name="username">username</string>

    <string name="Login">Login</string>

    <string name="password">password</string>
    <string name="age">age</string>
    <string name="email">email</string>
    <string name="Register">Register</string>
    <string name="Registerhere" />
    <string name="mobile">mobile</string>


    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>

    </string-array>

    <string-array name="locality">
        <item>Hyderabad</item>
        <item>Vellore</item>


    </string-array>


    <string-array name="bg">
        <item>A+</item>
        <item>A-</item>
        <item>O+</item>
        <item>O-</item>

    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="click">click</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="BloodGroup">BloodGroup</string>
    <string name="Locality">Locality</string>
    <string name="Search">Search</string>
    <string name="search">search</string>
    <string name="k">This app is all about the seeking the blood from the people who want to donate blood . The people who are in need can access the details of the blood donors . “WE CAN SAVE LIFE”</string>
    <string name="Name">Name</string>
    <string name="pincode">Pincode</string>
    <string name="State">State</string>
    <string name="District">District</string>
    <string name="Village">Village</string>
    <string name="hno">HNO and Others</string>
    <string name="submit">submit</string>
    <string name="l">village and district</string>
    <string name="title_activity_maps">Map</string>
</resources>
